[gd_scene load_steps=9 format=3 uid="uid://ceemxcslkt31b"]

[ext_resource type="Script" uid="uid://c0e8h833ypklr" path="res://scenes/run/run.gd" id="1_l7o68"]
[ext_resource type="Resource" uid="uid://ck8qxvs3me11h" path="res://scenes/run/run_startup.tres" id="2_o4jfg"]
[ext_resource type="PackedScene" uid="uid://6p15tduy6cd2" path="res://scenes/map/map.tscn" id="2_wdonh"]
[ext_resource type="Theme" uid="uid://d2wc7fposrlqs" path="res://themes/wizard_theme.tres" id="4_o4jfg"]
[ext_resource type="PackedScene" uid="uid://bxtf6la07t0t5" path="res://scenes/ui/card_pile_opener.tscn" id="5_0tt4g"]
[ext_resource type="PackedScene" uid="uid://yab08gtx7087" path="res://scenes/ui/gold_display.tscn" id="5_wo0nw"]
[ext_resource type="Theme" uid="uid://1dr1eewpv0jd" path="res://themes/ui_theme.tres" id="6_wo0nw"]
[ext_resource type="PackedScene" uid="uid://c634qgskmd0a" path="res://scenes/ui/card_pile_view.tscn" id="7_0tt4g"]

[node name="Run" type="Node"]
script = ExtResource("1_l7o68")
run_startup = ExtResource("2_o4jfg")

[node name="Map" parent="." instance=ExtResource("2_wdonh")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugUI" type="CanvasLayer" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="DebugUI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 100.0
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_o4jfg")
text = "Map"

[node name="BattleButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="TreasureButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="RewardsButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewards"

[node name="CampfireButton" type="Button" parent="DebugUI/DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 64)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.0990533, 0.0897, 0.23, 0.690196)

[node name="Items" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 64)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="GoldDisplay" parent="TopBar/Items" instance=ExtResource("5_wo0nw")]
unique_name_in_owner = true
layout_mode = 2

[node name="Placeholder" type="Control" parent="TopBar/Items"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CollectionButton" parent="TopBar/Items" node_paths=PackedStringArray("counter") instance=ExtResource("5_0tt4g")]
unique_name_in_owner = true
layout_mode = 2
counter = NodePath("Label")

[node name="Label" type="Label" parent="TopBar/Items/CollectionButton"]
layout_mode = 0
offset_left = 12.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 68.0
theme = ExtResource("6_wo0nw")
theme_override_colors/font_color = Color(0.450155, 0.160414, 0.275357, 1)
text = "99"
horizontal_alignment = 1

[node name="CollectionPileView" parent="TopBar" instance=ExtResource("7_0tt4g")]
unique_name_in_owner = true
visible = false
